# GanttWarrior

./: package.json  pyproject.toml  requirements.txt
.github/workflows/: build-tauri.yml  build.yml
docs/superpowers/plans/: 2026-03-26-gantt-grid-editor.md
docs/superpowers/specs/: 2026-03-26-gantt-grid-editor-design.md
ganttwarrior/: __init__.py  __main__.py  app.py  calendar_io.py  export.py  grid_editor.py  models.py  scheduler.py  undo.py  work_calendar.py
ganttwarrior/views/: __init__.py  gantt.py  kanban.py
src/: index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: test_calendar_io.py  test_export.py  test_grid_editor.py  test_models.py  test_scheduler.py  test_undo.py  test_work_calendar.py
