[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ganttwarrior"
version = "0.1.0"
description = "TUI Gantt chart and task scheduler with critical path, WBS, Kanban, and export support"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Brandon Lewis"},
]
dependencies = [
    "textual>=0.50.0",
    "rich>=13.0.0",
    "icalendar>=5.0.0",
    "openpyxl>=3.1.0",
    "fpdf2>=2.7.0",
]

[project.scripts]
ganttwarrior = "ganttwarrior.__main__:main"
gw = "ganttwarrior.__main__:main"

[tool.setuptools.packages.find]
include = ["ganttwarrior*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
