[package]
name = "ganttwarrior"
version = "0.1.0"
description = "Gantt chart and task scheduler desktop application"
authors = ["Brandon Lewis"]
edition = "2021"

[lib]
name = "ganttwarrior_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
